Add LogCommands option to log commands requested by client
At some point in the past, all logging of commands requested by the client
was removed from the OpenSSH server code with the rationale that this
preserves privacy.  Unfortunately, this preserves privacy at the cost of
safety and accountability - or, through the classical lens, enhances
user confidentiality at the expense of system availability and integrity.
Add a new LogCommands option - disabled by default! - to turn logging of
the full command requested by the client back on.

--- a/sshd_config.5
+++ b/sshd_config.5
@@ -1022,6 +1022,13 @@ Multiple
 options are permitted.
 For more information on routing domains, see
 .Xr rdomain 4 .
+.It Cm LogCommands
+Log the actual command executed by each "command" (non-interactive) session.
+Also enables session open/close and session type logging at the default
+.Cm LogLevel .
+.Pp
+To preserve privacy, the default is
+.Cm no .
 .It Cm LoginGraceTime
 The server disconnects after this time if the user has not
 successfully logged in.
